# -ATS_Center-Ats-fw-esp32-demo

./: CMakeLists.txt  Jenkinsfile  Jenkinsfile.test  README.md  sdkconfig.defaults
docs/: ESP32-TEST-REQUIREMENTS.md  ESP32-USB-STABILITY-FIX.md  PI-REVERT-KERNEL.md  pi-boot-delay.sh
docs/udev/: 99-cp210x-esp32.rules  99-mm-ignore-cp210x-esp32.rules
main/: CMakeLists.txt  app_main.c  idf_component.yml
